fix: size edit button on mobile

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -14,6 +14,7 @@
     margin-top: 8px;
     width: 18px;
     height: 18px;
+    background-size: 18px;
     font-size: 27px;
     line-height: 33px;
   }
